[tool.poetry]
name = "cipher_kj2592"
version = "0.1.0"
description = "this is for hw07"
authors = ["Keli Jiang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
